<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="22dp"
            android:paddingRight="22dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_user"
                    android:drawablePadding="12.5dp"
                    android:hint="@string/first_name"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_user"
                    android:drawablePadding="12.5dp"
                    android:hint="@string/last_name"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_mail"
                    android:drawablePadding="12.5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_next_page"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20.3dp"
                android:background="@color/red"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white" />



            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/icon_facebook"
                android:drawablePadding="12.5dp"
                android:paddingLeft="6dp"
                android:text="@string/Facebook"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <Button
                android:id="@+id/linkedin_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linkedinbutton"
                android:layout_marginTop="15dp"/>

        </LinearLayout>


    </ScrollView>
    </LinearLayout>

